<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">myTasks</string>
    
    <!-- Loginfenster -->
	<string name="login_user_text_view">Username</string>
	<string name="login_password_text_view">Password</string>
	<string name="login_button_login_text_view">Login</string>
	<string name="login_button_register_text_view">Sign up here</string>
	
	<!-- Registerfenster -->
	<string name="register_mail_text_view">EMail</string>
	<string name="register_password_text_view">Password</string>
	<string name="register_password_repeat_text_view">Repeat Password</string>
	<string name="register_user_name_text_view">Username</string>
	<string name="register_button_back_text_view">Back</string>
	<string name="register_button_register_text_view">Register</string>
	
	<!-- Taskistview -->
	<string name="tasklist_no_tasks_text_view">no tasks yet</string>
	<string name="tasklist_button_add_task_text_view">+</string>
	<string name="tasklist_buton_settings_text_view">settings</string>
	<string name="tasklist_button_update_text_view">update</string>	
	<string name="tasklist_last_update_text_view">last update:</string>
	<string name="tasklist_last_update_date_view">xx/xx/xxx</string>
	<string name="tasklist_last_update_time_view">--:--</string>
	
	<!-- Tasklistview -->
	<string name="create_tasklist_name_text_view">task list name</string>
	<string name="create_tasklist_button_back_text_view">back</string>
	<string name="create_tasklist_button_share_text_view">share</string>
	<string name="create_tasklist_button_add_task_text_view">add task</string>
	<string name="create_tasklist_button_archive_text_view">archive</string>
	<string name="txtViewPopupRename">Insert a new name:</string>
	
	<!-- Settings -->
	<string name="settings_tasklist_name_text_view">tasklist name</string>
	<string name="settings_button_share_text">share with others</string>
	<string name="settings_button_participants_text">show participants</string>
	
	<!-- share activity -->
	<string name="share_activity_tasklist_name_text_view">blocker für Tasklistnamen</string>
	<string name="share_activity_button_share_text">share</string>
	<string name="share_activity_email_text_view">Email of the person you want to share</string>
	<string name="share_activity_button_back_text">back</string>
	
	<!-- share Liste -->
	<string name="share_list_activity_tasklist_name_text_view">blocker für Tasklistnamen</string>
	<string name ="share_list_button_edit_text">edit</string>
	
	<!-- Context Menu -->
	<string name="str_context_menu_edit">Rename</string>
    <string name="str_context_menu_share">Share</string>
    <string name="str_context_menu_delete">Delete</string>
    <string name="str_context_menu_rate">Rate</string>    
    <string name="str_menu_unsubscribe">Unsubscribe</string>
    
    <!-- Context Menu Map-->
	<string name="str_context_menu_add_map_info">Add/Change Map Info</string>
    <string name="str_context_menu_show_map_info">Show Map Info</string>
    <string name="str_context_menu_delete_map_info">Delete Map Info</string>
    <string name="str_context_menu_delete_task">Delete Task</string>
    <string name="hint">Enter an adress</string>
	<string name="find">Find/Add</string>
    	
	<!-- allgemein -->
	<string name="action_settings">Settings</string>
	<string name="blank"> </string>
	
		
	<!-- Rating -->
	<string name="rate_view_rate_button_texts">rate!</string>
	<string name="rate_view_rate_current_rating_text">current average rating</string>

</resources>
