<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/mailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_mail_text_view"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/registerViewEmailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_password_text_view"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/registerViewPasswordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/passwordRepeatText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_password_repeat_text_view"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/registerViewRepeatPasswordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/userText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_user_name_text_view"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/registerViewUserNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/registerViewBackButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/register_button_back_text_view"
            android:onClick="activity_login"
             />

        <Button
            android:id="@+id/registerViewRegisterButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/register_button_register_text_view" />
    </LinearLayout>

</LinearLayout>