<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/shareViewTasklistName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="22dp"
        android:text="@string/settings_tasklist_name_text_view" />

    <EditText
        android:id="@+id/shareViewEmailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/shareViewTasklistName"
        android:layout_marginTop="78dp"
        android:ems="10"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/emailToShareTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/shareViewEmailInput"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/share_activity_email_text_view" />

    <Button
        android:id="@+id/shareViewShareButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/share_activity_button_share_text" />

    <Button
        android:id="@+id/shareViewBackButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/shareViewShareButton"
        android:layout_alignBottom="@+id/shareViewShareButton"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="18dp"
        android:text="@string/share_activity_button_back_text"
        android:onClick="back"/>

</RelativeLayout>
