<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="15dp" >

        <Button
            android:id="@+id/loginViewLoginButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/login_button_login_text_view" 
            android:onClick="login"/>

        <Button
            android:id="@+id/loginViewRegisterButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/login_button_register_text_view"
            android:onClick="register"
             />
    </LinearLayout>

    <EditText
        android:id="@+id/loginViewPasswordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/loginViewEmailInput"
        android:layout_below="@+id/loginViewEmailText"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/loginViewEmailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginViewEmailInput"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/login_user_text_view" />

    <TextView
        android:id="@+id/loginViewPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginViewPasswordInput"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/login_password_text_view" />

    <EditText
        android:id="@+id/loginViewEmailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textEmailAddress" >
        
        <requestFocus />
    </EditText>

</RelativeLayout>
